Refactoring: URL -> URI for storing references to API objects in the index (as URL is perhaps too strict). Slight refactor of API crawler.