@@ -2,15 +2,15 @@ package xalbrech.exercises.starwars.index;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import xalbrech.exercises.starwars.index.SearchIndex;
 
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
 import java.util.Collection;
 import java.util.Collections;
 
 import static org.hamcrest.MatcherAssert.assertThat;
-import static org.hamcrest.Matchers.*;
+import static org.hamcrest.Matchers.contains;
+import static org.hamcrest.Matchers.containsInAnyOrder;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
 public class SearchIndexTest {
@@ -20,7 +20,7 @@ public class SearchIndexTest {
     @BeforeEach
     public void setUp() throws MalformedURLException {
         searcher = new SearchIndex();
-        searcher.addItemToIndex("Tatooine", new URL("https://swapi.dev/api/planets/1/"));
+        searcher.addItemToIndex("Tatooine", URI.create("https://swapi.dev/api/planets/1/"));
     }
 
     @Test
@@ -40,35 +40,35 @@ public class SearchIndexTest {
 
     @Test
     public void searchTatooineShallReturnItsUrl() throws MalformedURLException {
-        Collection<URL> result = searcher.search("Tatooine");
-        assertThat(result, contains(new URL("https://swapi.dev/api/planets/1/")));
+        Collection<URI> result = searcher.search("Tatooine");
+        assertThat(result, contains(URI.create("https://swapi.dev/api/planets/1/")));
     }
 
     @Test
     public void searchAlderaanShallReturnItsUrl() throws MalformedURLException {
-        searcher.addItemToIndex("Alderaan", new URL("https://swapi.dev/api/planets/2/"));
-        Collection<URL> result = searcher.search("Alderaan");
-        assertThat(result, contains(new URL("https://swapi.dev/api/planets/2/")));
+        searcher.addItemToIndex("Alderaan", URI.create("https://swapi.dev/api/planets/2/"));
+        Collection<URI> result = searcher.search("Alderaan");
+        assertThat(result, contains(URI.create("https://swapi.dev/api/planets/2/")));
     }
 
     @Test
     public void searchBothTatooineAndAlderaanShallReturnBothUrls() throws MalformedURLException {
-        searcher.addItemToIndex("Alderaan", new URL("https://swapi.dev/api/planets/2/"));
-        Collection<URL> result = searcher.search("Tatooine Alderaan");
-        assertThat(result, containsInAnyOrder(new URL("https://swapi.dev/api/planets/1/"),
-                new URL("https://swapi.dev/api/planets/2/")));
+        searcher.addItemToIndex("Alderaan", URI.create("https://swapi.dev/api/planets/2/"));
+        Collection<URI> result = searcher.search("Tatooine Alderaan");
+        assertThat(result, containsInAnyOrder(URI.create("https://swapi.dev/api/planets/1/"),
+                URI.create("https://swapi.dev/api/planets/2/")));
     }
 
 
     @Test
     public void oneSearchTermsMayReturnMultipleResults() throws MalformedURLException {
-        searcher.addItemToIndex("Alderaan", new URL("https://swapi.dev/api/planets/2/"));
-        searcher.addItemToIndex("Alderaan", new URL("https://swapi.dev/api/vehicles/3/"));
-        searcher.addItemToIndex("Alderaan", new URL("https://swapi.dev/api/films/1/"));
-        Collection<URL> result = searcher.search("Alderaan");
-        assertThat(result, containsInAnyOrder(new URL("https://swapi.dev/api/planets/2/"),
-                new URL("https://swapi.dev/api/vehicles/3/"),
-                new URL("https://swapi.dev/api/films/1/")));
+        searcher.addItemToIndex("Alderaan", URI.create("https://swapi.dev/api/planets/2/"));
+        searcher.addItemToIndex("Alderaan", URI.create("https://swapi.dev/api/vehicles/3/"));
+        searcher.addItemToIndex("Alderaan", URI.create("https://swapi.dev/api/films/1/"));
+        Collection<URI> result = searcher.search("Alderaan");
+        assertThat(result, containsInAnyOrder(URI.create("https://swapi.dev/api/planets/2/"),
+                URI.create("https://swapi.dev/api/vehicles/3/"),
+                URI.create("https://swapi.dev/api/films/1/")));
 
     }
 }
